@@ -1,3 +1,12 @@
+2005-08-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* providers/xml/gda-xml-provider.c (add_type_row): use
+	gda_value_new_gdatype, not gda_value_new_type.
+
+2005-08-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* libgda/gda-config,[ch]: added missing argument list.
+
 2006-08-07  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	Released 1.3.90.
